[package]
name = "v4if"
version = "0.1.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis", 
    "Win32_Networking_WinSock"
] }
